load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "recoverproto_proto",
    srcs = ["recover.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "recoverproto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/edgelesssys/constellation/v2/disk-mapper/recoverproto",
    proto = ":recoverproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "recoverproto",
    embed = [":recoverproto_go_proto"],
    importpath = "github.com/edgelesssys/constellation/v2/disk-mapper/recoverproto",
    visibility = ["//visibility:public"],
)
