load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/proto:rules.bzl", "write_go_proto_srcs")

proto_library(
    name = "recoverproto_proto",
    srcs = ["recover.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "recoverproto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    gc_goopts = ["-trimpath=$(BINDIR)=>."],
    importpath = "github.com/edgelesssys/constellation/v2/disk-mapper/recoverproto",
    proto = ":recoverproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "recoverproto",
    embed = [":recoverproto_go_proto"],
    importpath = "github.com/edgelesssys/constellation/v2/disk-mapper/recoverproto",
    visibility = ["//visibility:public"],
)

write_go_proto_srcs(
    name = "write_generated_protos",
    src = "recover.pb.go",
    go_proto_library = ":recoverproto_go_proto",
    visibility = ["//visibility:public"],
)
