load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "multirun")
load("//bazel/sh:def.bzl", "sh_template")

filegroup(
    name = "dependencies",
    srcs = [
        ".terraform.lock.hcl",
        "cloud-init.yaml",
        "main.tf",
        "output.tf",
        "test-remote.sh",
        "variables.tf",
    ],
)

sh_library(
    name = "dependencies_lib",
    srcs = [
        ":dependencies",
    ],
)

sh_template(
    name = "remote_test",
    data = [
        "//cli:cli_enterprise_linux_amd64",
    ],
    substitutions = {
        "@@PATH_CLI@@": "$(rootpath //cli:cli_enterprise_linux_amd64)",
    },
    template = "main.sh.in",
    deps = [
        ":dependencies_lib",
    ],
)

multirun(
    name = "push_remote_test",
    commands = [
        "//bazel/release:push",
        ":remote_test",
    ],
    jobs = 1,  # execute sequentially
    visibility = ["//visibility:public"],
)
