load("//bazel/go:go_test.bzl", "go_test")

go_test(
    name = "provider-upgrade_test",
    srcs = ["upgrade_test.go"],
    # keep
    gotags = ["e2e"],
    deps = [
        "//e2e/internal/kubectl",
        "//e2e/internal/upgrade",
        "//internal/semver",
        "//internal/versions",
        "@com_github_stretchr_testify//require",
    ],
)
