load("//bazel/go:go_test.bzl", "go_test")

go_test(
    name = "provider-upgrade_test",
    srcs = ["upgrade_test.go"],
    # keep
    count = 1,
    gotags = ["e2e"],
    tags = ["manual"],
    deps = [
        "//e2e/internal/kubectl",
        "//e2e/internal/upgrade",
        "//internal/constants",
        "@com_github_stretchr_testify//require",
    ],
)
